# GrammarGuard

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: debug_spell.py  kill_server.py  main.py  test_api.py  test_grammar_advanced.py
frontend/: pubspec.yaml
frontend/lib/: api_service.dart  main.dart
frontend/test/: widget_test.dart
